--- a/index.html
+++ b/index.html
@@ -1,11 +1,165 @@
-
+<!doctype html>
 <html>
   <head>
-    <title>Geocoding Production Site</title>
-  	
-  <link href="main.css" rel="stylesheet"></head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Open-aid-geocoder by devgateway</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
   <body>
-    <div id='root'> </div>
-   
-  <script src="bundle.js"></script></body>
+    <div class="wrapper">
+      <header>
+        <h1>Open-aid-geocoder</h1>
+        <p>Open Aid Geocoder</p>
+
+        <p class="view"><a href="https://github.com/devgateway/open-aid-geocoder">View the Project on GitHub <small>devgateway/open-aid-geocoder</small></a></p>
+
+
+        <ul>
+          <li><a href="https://github.com/devgateway/open-aid-geocoder/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/devgateway/open-aid-geocoder/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/devgateway/open-aid-geocoder">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>
+<a id="open-aid-geocoder" class="anchor" href="#open-aid-geocoder" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Open Aid Geocoder</h1>
+
+<p>This tools allow users to attach geographical information to existing aid projects. 
+ The project supports </p>
+
+<ul>
+<li>hot reloading React components;</li>
+<li>error handling inside component <code>render()</code> function;</li>
+<li>error handling for syntax errors </li>
+</ul>
+
+<h1>
+<a id="demo" class="anchor" href="#demo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Demo</h1>
+
+<p><a href="http://devgateway.github.io/open-aid-geocoder">http://devgateway.github.io/open-aid-geocoder</a></p>
+
+<h1>
+<a id="development" class="anchor" href="#development" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Development</h1>
+
+<h2>
+<a id="npm-build" class="anchor" href="#npm-build" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>npm build</h2>
+
+<pre><code>git clone 
+cd  
+npm install
+npm run build
+npm start 
+open http://localhost:3000
+</code></pre>
+
+<h2>
+<a id="gulp-build" class="anchor" href="#gulp-build" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>gulp build</h2>
+
+<pre><code>npm install gulp -G
+npm install 
+gulp 
+</code></pre>
+
+<h2>
+<a id="production-build" class="anchor" href="#production-build" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Production build</h2>
+
+<pre><code>npm install gulp -G
+npm install 
+gulp build-prod
+</code></pre>
+
+<h2>
+<a id="gh_pages-deployment" class="anchor" href="#gh_pages-deployment" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>gh_pages deployment</h2>
+
+<pre><code>gulp deploy
+
+</code></pre>
+
+<p>Running gulp without target will build the project using web pack development configuration and will start an express web server.
+Run gulp build-prod to build a distributable application.
+Run gulp deploy to push dist folder into gh_pages branch </p>
+
+<h1>
+<a id="api" class="anchor" href="#api" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>API</h1>
+
+<p>The API provides set of endpoint exposed over HTTP protocol using Javascript Object Notation (JSON).
+Each endpoint should follow a standard implementation, please refer to <a href="https://github.com/WhiteHouse/api-standards">https://github.com/WhiteHouse/api-standards</a>. </p>
+
+<p>Project List
+URL: /projects 
+HTTP Method: GET,
+Content Type: 'application/json'
+Returns An array of projects
+``
+e.g:</p>
+
+<pre><code>{
+"count":10,
+"projects":[
+{
+"project_id":2390082,
+"title":"BPD Institutional Support Study (Grant)",
+"long_description":"Will be used to finance the entire foreign exchange cost of the study.....",
+"country":{
+     "id":110593497,
+      "name":"Mozambique",
+      "iso3":"MOZ"
+   },
+},
+{
+"project_id":2165211,
+"title":"Beira Corridor Health Project",
+"long_description":"The ADF loan will be used to finance 90 per cent of the total cost of the project while the remaining 10 per cent will be provided by the Government of Mozambique.",
+"country":{
+"id":110593497,
+"name":"Mozambique",
+"iso3":"MOZ",
+}
+},
+
+{
+"project_id":635642,
+"title":"Cashew Rehabilitation Project",
+"long_description":"The objective of the project is to increase the production of raw cashew nuts ...",
+"country":{
+"id":110593497,
+"name":"Mozambique",
+"iso3":"MOZ",
+},
+"locations":[
+{
+"name":"Provincia de Manica",
+"id":112211328,
+"description":"The location is within a first order administrative division (ADM1), such as a province, state or governorate, but the location within the ADM1 is unknown.",
+"activityDescription":"To (a) increase the number and raise the quality of graduates at the undergraduate and graduate levels",
+"country":{"ISO2":"MZ","ISO3":"MOZ","name":"Mozambique"},
+"admin1":{ "id":2115, "name":"Manica"},
+"geometry":{"type":"Point","coordinates":[33.5,-19]},
+"featureDesignation":{"code":"PPL","name":"populated place"},
+"locationClass":{"code":"2","name":"Populated Place"},
+"exactness":{"code":"1","name":"Exact"}
+}
+]
+}
+]
+
+}
+
+</code></pre>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/devgateway">devgateway</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
