--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div id='root'> </div>
+    <script>L_PREFER_CANVAS = true;</script>
      <script src="bundle.js"></script>
   </body>
 </html>
