--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   	
   <link href="main.css" rel="stylesheet"></head>
   <body>
+    <script>L_PREFER_CANVAS = true;</script>
     <div id='root'> </div>
    
   <script src="bundle.js"></script></body>
