--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Geocoding Development Site</title>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <body>
     <div id='root'> </div>
